--- a/logging/pom.xml
+++ b/logging/pom.xml
@@ -10,23 +10,35 @@
     </parent>
 
     <groupId>dev.stan</groupId>
-    <artifactId>main</artifactId>
+    <artifactId>logging</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+
     <dependencies>
+        <!-- <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.36</version>
+        </dependency> -->
         <dependency>
-            <groupId>dev.stan</groupId>
-            <artifactId>logging</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.23.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.23.1</version>
         </dependency>
         <dependency>
-            <groupId>dev.stan</groupId>
-            <artifactId>gui</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.23.1</version>
         </dependency>
     </dependencies>
 
