--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,21 @@
         <module>autostart</module>
         <module>gui</module>
         <module>main</module>
+        <module>logging</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+    <dependencies>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.36</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
