--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -46,7 +46,7 @@
                         <!-- Usage: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>dev.stan.gui.App</mainClass>
+                            <mainClass>dev.stan.gui.Gui</mainClass>
                             <modulePathElement>gui</modulePathElement>
                         </configuration>
                     </execution>
