--- a/main/pom.xml
+++ b/main/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>gui</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>dev.stan</groupId>
+            <artifactId>autostart</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
